overflow fix and remove autoplay on video

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,12 +22,6 @@
     padding: 0;
 }
 
-
-html, body
-{
-    overflow-x: hidden;
-}
-
 .webgl {
     position: fixed;
     top: 0;
